--- a/html/index.html
+++ b/html/index.html
@@ -22,92 +22,77 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin+Dark">
     <!-- Vendor CSS Files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../assets/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/javascript/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../assets/javascript/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../assets/javascript/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../assets/javascript/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- CSS Files -->
     <link href="../assets/css/general_style.css" rel="stylesheet">
     <link href="../assets/css/navbar_style.css" rel="stylesheet">
     <link href="../assets/css/home_style.css" rel="stylesheet">
 
-    <link rel="icon" href="img/real-icon.jpg">
+    <link rel="icon" href="../assets/img/secute-logo.png">
 </head>
 <body>
 
-<!--------------------------------- HEADER & NAVBAR --------------------------------------------------->
+    <!--------------------------------- NAVBAR --------------------------------------------------->
     <header id="header" class="fixed-top">
-        <div class="container d-flex align-items-center justify-content-between">
-
+        <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
+            <div class="d-flex">
+            <a href="index.html" class="logo" style="margin-right: 20px"><img src="../assets/img/secute-logo.png" alt="" class="img-fluid"></a>
             <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo"><img src="assets/img/real-icon.jpg" alt="" class="img-fluid"></a>
+            </div>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#home">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#call_for_papers">Call for papers</a></li>
-                    <li><a class="nav-link scrollto" href="#accepted_papers">Accepted Papers</a></li>
-                    <li><a class="nav-link scrollto " href="#program">Program</a></li>
-                    <li><a class="nav-link scrollto" href="#committee">Committee</a></li>
-                    <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
+                    <li><a class="nav-link scrollto active" href="#home"><i class="bi bi-house"></i> Home</a></li>
+                    <li><a class="nav-link scrollto" href="#call_for_papers"><i class="bi bi-bell"></i>Call for papers</a></li>
+                    <li><a class="nav-link scrollto" href="#accepted_papers"><i class="bi bi-journals"></i>Accepted Papers</a></li>
+                    <li><a class="nav-link scrollto " href="#program"><i class="bi bi-pencil-square"></i>Program</a></li>
+                    <li><a class="nav-link scrollto" href="#committee"><i class="bi bi-people"></i>Committee</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
 
         </div>
     </header>
-<!--------------------------------- END HEADER --------------------------------------------------->
+    <!--------------------------------- END NAVBAR --------------------------------------------------->
 
-<!-- ======= Hero Section ======= -->
+    <!--------------------------------- HEADER --------------------------------------------------->
     <section id="home" class="d-flex align-items-center">
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center">
-                    <h1>Viviana Pentangelo</h1>
-                    <h2>Ph.D. Student in Computer Science</h2>
-                    <div id="buttons-div">
-                        <a href="https://twitter.com/vipenti" target="_blank" class="header-button twitter"><i class="bx bxl-twitter"></i></a>
-                        <a href="https://github.com/vipenti" target="_blank" class="header-button github"><i class="bx bxl-github"></i></a>
-                        <a href="https://www.linkedin.com/in/vivianapentangelo/" target="_blank" class="header-button linkedin"><i class="bx bxl-linkedin"></i></a>
-                        <a href="https://vipenti.github.io/" target="_blank" class="header-button instagram"><i class="bx bxl-instagram"></i></a>
-                    </div>
-                    <div class="d-flex">
-                        <a href="assets/docs/PentangeloViviana_resume.pdf" download class="btn-get-started scrollto">Download Résumé</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 order-1 order-lg-2 hero-img">
-                    <div class="flipper">
-                        <div class="thecard">
-                            <div class="thefront"><img src="assets/img/circle-pic.png" class="img-fluid animated" alt="human"></div>
-                            <div class="theback"><img src="assets/img/bubble-me.png" class="img-fluid animated" alt="cartoon"></div>
-                        </div>
-                    </div>
+                <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
+                    <div><img src="../assets/img/secute-logo.png" class="img-fluid col-lg-3 rounded mx-auto d-block"
+                              data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000" alt="logo"></div>
+                    <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">SECUTE 2024</h1>
+                    <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 1st Workshop on Security Testing for Complex Software Systems</h2>
+                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">Jun 21, 2024 - Salerno, Italy</h2>
+                    <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800"> Co-located with <a href="https://conf.researchr.org/home/ease-2024">EASE 2024</a></h3>
                 </div>
             </div>
         </div>
+    </section>
+    <!--------------------------------- END HEADER --------------------------------------------------->
 
-    </section><!-- End Hero -->
 
-    <!-- Vendor JS Files -->
+    <!--------------------------------- SCRIPTS --------------------------------------------------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-      </script>
     <script src="assets/javascript/purecounter/purecounter_vanilla.js"></script>
     <script src="assets/javascript/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/javascript/glightbox/js/glightbox.min.js"></script>
     <script src="assets/javascript/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/javascript/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script>
+        AOS.init();
+      </script>
 
 </body>
 </html>
