--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,20 @@
     </section>
     <!--------------------------------- END HEADER --------------------------------------------------->
 
+    <!--------------------------------- ABOUT --------------------------------------------------->
+    <section id="about" class="d-flex align-items-center">
+
+        <div class="container">
+            <div class="row">
+                <h1> AOOOOOOOOOOOO </h1>
+                <p> forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma
+                    forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma
+                    forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma </p>
+            </div>
+        </div>
+    </section>
+    <!--------------------------------- END ABOUT --------------------------------------------------->
+
 
     <!--------------------------------- SCRIPTS --------------------------------------------------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
