--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,7 @@
     <link href="../assets/css/general_style.css" rel="stylesheet">
     <link href="../assets/css/navbar_style.css" rel="stylesheet">
     <link href="../assets/css/home_style.css" rel="stylesheet">
+    <link href="../assets/css/footer_style.css" rel="stylesheet">
 
     <link rel="icon" href="../assets/img/secute-logo.png">
 </head>
@@ -85,25 +86,91 @@
     <section id="about" class="d-flex align-items-center">
 
         <div class="container">
-            <div class="row">
-                <h1> AOOOOOOOOOOOO </h1>
-                <p> forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma
-                    forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma
-                    forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma forza roma </p>
+            <div class="row about-container">
+                <h2 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Motivation </h2>
+                <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> La <b style="color: rgb(48, 86, 175)">burrata</b> è un formaggio fresco, di latte vaccino, a pasta filata, tipico delle Murge, in Puglia. È a forma di sacca tondeggiante
+                    con la caratteristica chiusura apicale e dall'aspetto esterno simile alla mozzarella. L'interno, simile alla manteca, è morbido e
+                    filamentoso. La burrata è frutto dell'arte casearia pugliese, in particolare di quella di Andria. Si narra che la burrata di Andria
+                    fu inventata in un’antica masseria nei primi decenni del XX secolo dai fratelli Vincenzo e Lorenzo Bianchino. A causa di una forte
+                    nevicata, non potendo trasferire il latte in città, avrebbero avuto la necessità di trasformarlo e soprattutto di utilizzare la panna
+                    o crema che affiorava naturalmente. Così, seguendo il concetto di produzione delle mantéche (involucri di pasta filata stagionata in
+                    cui è conservato il burro), i Bianchino provarono a realizzare con lo stesso principio un prodotto fresco:[1] pensarono di mescolare
+                    i residui della lavorazione della pasta filata con della panna ed avvolgere il tutto in un involucro fatto anch'esso di pasta filata. </p>
+            </div>
+            <div class="row about-container">
+                <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Where and When? </h3>
+                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 1st Workshop on Security Testing for Complex Software Systems
+                    will be held at Salerno, Italy, co-located with <a href="https://conf.researchr.org/home/ease-2024">EASE 2024</a>. </h4>
             </div>
         </div>
     </section>
     <!--------------------------------- END ABOUT --------------------------------------------------->
 
+    <!--------------------------------- INFOS --------------------------------------------------->
+    <section id="infos" class="d-flex align-items-center">
+        <div class="container d-flex">
+
+            <div id="important-dates">
+                <h2> Important Dates </h2>
+                <div class="section-title">
+                    <div id="date-list">
+                        <div class="date next-date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                            <h3>March 8th, 2024</h3>
+                            <p>Papers submission</p>
+                        </div>
+                        <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                            <h3>April 12th, 2024</h3>
+                            <p>Papers notification</p>
+                        </div>
+                        <div class="date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                            <h3>April 26th, 2024</h3>
+                            <p>Papers camera-ready</p>
+                        </div>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3>May 5th, 2024</h3>
+                            <p>Early registration deadline</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="twitter">
+                <h2> Twitter </h2>
+                <a class="twitter-timeline" data-tweet-limit="2" href="https://twitter.com/EmanueleIannon3">Tweets by SECUTE2024</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
+
+    </section>
+    <!--------------------------------- INFOS --------------------------------------------------->
+
+    <!--------------------------------- FOOTER --------------------------------------------------->
+    <footer id="footer">
+
+        <div class="container footer-bottom clearfix">
+            <div class="copyright">
+                &copy; Copyright <strong><span>eNno</span></strong>. All Rights Reserved
+            </div>
+            <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/enno-free-simple-bootstrap-template/ -->
+                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
+        </div>
+    </footer>
+    <!--------------------------------- END FOOTER --------------------------------------------------->
+
 
     <!--------------------------------- SCRIPTS --------------------------------------------------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="assets/javascript/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/javascript/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/javascript/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/javascript/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/javascript/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/javascript/purecounter/purecounter_vanilla.js"></script>
+    <script src="../assets/javascript/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/javascript/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/javascript/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/javascript/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/javascript/main.js"></script>
     <script>
         AOS.init();
       </script>
