Call for paper implementation #1

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin+Dark">
     <!-- Vendor CSS Files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="../assets/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/javascript/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/javascript/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="../assets/javascript/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/javascript/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/javascript/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/javascript/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/javascript/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/javascript/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- CSS Files -->
-    <link href="../assets/css/general_style.css" rel="stylesheet">
-    <link href="../assets/css/navbar_style.css" rel="stylesheet">
-    <link href="../assets/css/home_style.css" rel="stylesheet">
-    <link href="../assets/css/footer_style.css" rel="stylesheet">
+    <link href="assets/css/general_style.css" rel="stylesheet">
+    <link href="assets/css/navbar_style.css" rel="stylesheet">
+    <link href="assets/css/home_style.css" rel="stylesheet">
+    <link href="assets/css/footer_style.css" rel="stylesheet">
 
-    <link rel="icon" href="../assets/img/secute-logo.png">
+    <link rel="icon" href="assets/img/secute-logo.png">
 </head>
 <body>
 
@@ -45,14 +45,14 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
             <div class="d-flex">
-            <a href="index.html" class="logo" style="margin-right: 20px"><img src="../assets/img/secute-logo.png" alt="" class="img-fluid"></a>
+            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
             <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
             </div>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#home"><i class="bi bi-house"></i> Home</a></li>
-                    <li><a class="nav-link scrollto" href="#call_for_papers"><i class="bi bi-bell"></i>Call for papers</a></li>
+                    <li><a class="nav-link active" href="index.html"><i class="bi bi-house"></i> Home</a></li>
+                    <li><a class="nav-link" href="call_for_papers.html"><i class="bi bi-bell"></i>Call for papers</a></li>
                     <li><a class="nav-link scrollto" href="#accepted_papers"><i class="bi bi-journals"></i>Accepted Papers</a></li>
                     <li><a class="nav-link scrollto " href="#program"><i class="bi bi-pencil-square"></i>Program</a></li>
                     <li><a class="nav-link scrollto" href="#committee"><i class="bi bi-people"></i>Committee</a></li>
@@ -70,8 +70,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
-                    <div><img src="../assets/img/secute-logo.png" class="img-fluid col-lg-3 rounded mx-auto d-block"
-                              data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000" alt="logo"></div>
+                    <div><img src="assets/img/secute-logo.png" class="img-fluid col-lg-3 rounded mx-auto d-block"
+                              data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
                     <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">SECUTE 2024</h1>
                     <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 1st Workshop on Security Testing for Complex Software Systems</h2>
                     <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">Jun 21, 2024 - Salerno, Italy</h2>
@@ -149,14 +149,13 @@
 
         <div class="container footer-bottom clearfix">
             <div class="copyright">
-                &copy; Copyright <strong><span>eNno</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/enno-free-simple-bootstrap-template/ -->
+                &copy; Copyright for JavaScript scripts:  <strong><span>eNno</span></strong>.</br>
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            </div>
+            <div class="credits">
+                SECUTE 2024
             </div>
         </div>
     </footer>
@@ -165,12 +164,12 @@
 
     <!--------------------------------- SCRIPTS --------------------------------------------------->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="../assets/javascript/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/javascript/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/javascript/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/javascript/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/javascript/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/javascript/main.js"></script>
+    <script src="assets/javascript/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/javascript/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/javascript/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/javascript/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/javascript/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/javascript/main.js"></script>
     <script>
         AOS.init();
       </script>
