Call for papers implementation #2

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <ul>
                     <li><a class="nav-link active" href="index.html"><i class="bi bi-house"></i> Home</a></li>
                     <li><a class="nav-link" href="call_for_papers.html"><i class="bi bi-bell"></i>Call for papers</a></li>
-                    <li><a class="nav-link scrollto" href="#accepted_papers"><i class="bi bi-journals"></i>Accepted Papers</a></li>
-                    <li><a class="nav-link scrollto " href="#program"><i class="bi bi-pencil-square"></i>Program</a></li>
-                    <li><a class="nav-link scrollto" href="#committee"><i class="bi bi-people"></i>Committee</a></li>
+                    <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li>
+                    <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
+                    <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -142,7 +142,7 @@
         </div>
 
     </section>
-    <!--------------------------------- INFOS --------------------------------------------------->
+    <!---------------------------------- INFOS --------------------------------------------------->
 
     <!--------------------------------- FOOTER --------------------------------------------------->
     <footer id="footer">
