--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -47,8 +47,8 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
-            <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
+        <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
+        <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -69,7 +69,7 @@
 <!--------------------------------- CALLS INFO --------------------------------------------------->
 <section id="calls_info" class="d-flex align-items-center">
 
-    <div class="container">
+    <div class="container container_custom">
         <div class="row class-container">
             <h2> <i class="bi bi-bell"></i> Call for Papers </h2>
             <div class="grey" data-aos="fade-right" data-aos-delay="200" data-aos-duration="500">
@@ -188,7 +188,7 @@
 
     </div>
 </section>
-<!--------------------------------- CALLS INFO --------------------------------------------------->
+<!--------------------------------- END CALLS INFO --------------------------------------------------->
 
 <!--------------------------------- FOOTER --------------------------------------------------->
 <footer id="footer">
