--- a/committee.html
+++ b/committee.html
@@ -19,6 +19,7 @@
     <!-- Favicons -->
     <link href="assets/img/icon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -35,6 +36,7 @@
     <link href="assets/css/general_style.css" rel="stylesheet">
     <link href="assets/css/navbar_style.css" rel="stylesheet">
     <link href="assets/css/footer_style.css" rel="stylesheet">
+    <link href="assets/css/committee_style.css" rel="stylesheet">
 
     <link rel="icon" href="assets/img/secute-logo.png">
 </head>
@@ -62,6 +64,110 @@
     </div>
 </header>
 <!--------------------------------- END NAVBAR --------------------------------------------------->
+
+<!------------------------------------ COMMITTEE --------------------------------------------------->
+
+<section id="committee" class="d-flex align-items-center">
+
+    <div class="container">
+
+        <h2> <i class="bi bi-people"></i> Committee </h2>
+
+        <div class="row class-container grey" id="chairs">
+            <h3> Workshop Chairs</h3>
+            <div class="type-chairs">
+                <h4> Organizing Chairs</h4>
+                <div class="row member-container">
+
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="100"  data-aos-duration="800">
+                        <div class="member">
+                        <div class="member-img">
+                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                        </div>
+                        <div class="member-info">
+                            <h5><a href="https://valeriapontillo.github.io/" target="_blank">Valeria Pontillo</a></h5>
+                            <span>Vrije Universiteit Brussel</span>
+                            <span>Bruxelles, Belgium</span>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="200"  data-aos-duration="800">
+                        <div class="member">
+                        <div class="member-img">
+                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                        </div>
+                        <div class="member-info">
+                            <h5><a href="https://emaiannone.github.io/" target="_blank">Emanuele Iannone</a></h5>
+                            <span>Hamburg University of Technology</span>
+                            <span>Hamburg, Germany</span>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="300"  data-aos-duration="800">
+                        <div class="member">
+                        <div class="member-img">
+                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                        </div>
+                        <div class="member-info">
+                            <h5><a href="https://soft.vub.ac.be/~cderoove/" target="_blank">Coen De Roover</a></h5>
+                            <span>Vrije Universiteit Brussel</span>
+                            <span>Bruxelles, Belgium</span>
+                        </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-right" data-aos-delay="400"  data-aos-duration="800">
+                        <div class="member">
+                        <div class="member-img">
+                            <img src="assets/img/valeria.jpeg" class="img-fluid" alt="">
+                        </div>
+                        <div class="member-info">
+                            <h5><a href="https://scandariato.org/" target="_blank">Riccardo Scandariato</a></h5>
+                            <span>Hamburg University of Technology</span>
+                            <span>Hamburg, Germany</span>
+                        </div>
+                        </div>
+                    </div>
+
+                </div>
+                
+            </div>
+            <div class="type-chairs">
+                <h4> Web & Publicity Chair</h4>
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
+                        <div class="member">
+                            <div class="member-img">
+                                <img src="assets/img/sbonk.webp" class="img-fluid" alt="">
+                            </div>
+                            <div class="member-info">
+                                <h5><a href="https://vipenti.github.io/" target="_blank">Viviana Pentangelo</a></h5>
+                                <span>University of Salerno</span>
+                                <span>Salerno, Italy</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row class-container white" id="program_committee" style="margin-top:3%">
+            <h3> Program Chair </h3>
+            <div style="margin: 1%;">
+                <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
+                    <li> <strong> Dario Di Dario</strong>, University of Salerno, Italy </li>
+                    <li> <strong> Ruben Opdebeeck</strong>, Vrije Universiteit Brussel, Belgium </li>
+                    <li> <strong> Quang Cuong Bui</strong>, Hamburg University of Technology, Germany </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<!--------------------------------- END COMMITTEE --------------------------------------------------->
 
 
 
