Call for papers info update

--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -138,9 +138,13 @@
         <div class="row aclass-container">
             <div class="grey" data-aos="fade-right" data-aos-delay="400" data-aos-duration="500">
                 <h3>How to submit </h3>
-                <p> All papers must be submitted in PDF format through EasyChair. The page limit is set to 10 for full papers and 5 for short papers, including all figures, tables, references, and
+                <!--<p> All papers must be submitted in PDF format through EasyChair. The page limit is set to 10 for full papers and 5 for short papers, including all figures, tables, references, and
                     appendices. All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Deviating from the ACM formatting instructions
-                    may lead to a desk rejection. </p>
+                    may lead to a desk rejection. </p>-->
+                <p> All submissions must use the official <a href="https://www.acm.org/publications/proceedings-template">ACM Primary Article Template</a>. Formatting instructions are available for both LaTeX and Word users. LaTeX users must use the
+                    provided <code>acmart.cls</code> and <code>ACM-Reference-Format.bst</code> without modification, enable the conference format in the preamble of the document
+                    (i.e., <code>\documentclass[sigconf,review]{acmart}</code>), and use the ACM reference format for the bibliography (i.e.,
+                    <code>\bibliographystyle{ACM-Reference-Format}</code>).</p>
                 <p> Authors must comply with the <a href="https://github.com/acmsigsoft/open-science-policies/blob/master/sigsoft-open-science-policies.md">SIGSOFT Open Science Policy</a>,
                      (i.e., to archive data and artifacts in a permanent repository—e.g., Zenodo, not GitHub—to 
                     the extent ethically and practically possible, and include links in a Data Availability section in their manuscripts). </p>
