--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -166,7 +166,7 @@
                     involves human participants/subjects, the authors must adhere to the <a href="https://www.acm.org/publications/policies/research-involving-human-participants-and-subjects">
                         ACM Publications Policy on Research Involving Human Participants and Subjects</a>.</p>
                 <p> Please note that for each accepted paper, at least one author must register at SECUTE 2024 and present it. This is mandatory to get the paper published in the proceedings.</p>
-                <!--<h4> Link for the submission: ??? </h4>-->
+                <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
             </div>
         </div>
 
