--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -191,7 +191,8 @@
             <div class="grey" data-aos="fade-right" data-aos-delay="800" data-aos-duration="500">
                 <h3>Special Issue</h3>
                 <p> Authors of selected papers accepted at SECUTE 2024 will be invited to submit revised, extended versions of their manuscripts for a special issue of the
-                    <a href="https://link.springer.com/journal/10664" target="_blank">Empirical Software Engineering (EMSE) </a>, edited by Springer. We will post as soon as possible further details of the call. </p>
+                    <a href="https://link.springer.com/journal/10664" target="_blank">Empirical Software Engineering (EMSE)</a>, edited by Springer. </p>
+                <p> You can find more details here: <a href="https://emsejournal.github.io/special_issues/2024_SI_SECUTE.html" target="_blank"> https://emsejournal.github.io/special_issues/2024_SI_SECUTE.html </a></p>
 
             </div>
         </div>
